--- a/app/views/listing_mailer/send_listing_new_mail.html.erb
+++ b/app/views/listing_mailer/send_listing_new_mail.html.erb
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Thanks for creating the listing, <%= @user.email %>!</h1>
-    <p>Thanks for being awesome! Hope you have a great day.</p>
+    <p>You spent <%= @listing.price %> on the item.</p>
   </body>
 </html>
