--- a/app/views/listing_mailer/send_listing_new_mail.text.erb
+++ b/app/views/listing_mailer/send_listing_new_mail.text.erb
@@ -1,3 +1,3 @@
 Thanks for creating the listing, <%= @user.email %>!
 
-Thanks for being awesome! Hope you have a great day.
+You spent <%= @listing.price %> on the item.
