--- a/app/views/listing_mailer/send_listing_new_mail.html.erb
+++ b/app/views/listing_mailer/send_listing_new_mail.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p>Thanks for creating the listing, <%= @user.email %>!</p>
-    <p>You spent $<%= @listing.price %> on the item.</p>
+    <p>Thanks for creating the listing <%= @user.email %>!</p>
+    <p>You created a listing named <%= @listing.name %> and it costs $<%= @listing.price %>.</p>
   </body>
 </html>
