--- a/app/views/listing_mailer/send_listing_new_mail.text.erb
+++ b/app/views/listing_mailer/send_listing_new_mail.text.erb
@@ -1,3 +1,3 @@
 Thanks for creating the listing, <%= @user.email %>!
 
-You spent $<%= @listing.price %> on the item.
+You created a listing named <%= @listing.name %> and it costs $<%= @listing.price %>.
